fixed footer icon alignment

--- a/sass/partials/_layout.scss
+++ b/sass/partials/_layout.scss
@@ -14,6 +14,9 @@ body {
 
       span, i {
         @include inline-block;
+      }
+
+      i {
         margin-left: rem-calc(10);
       }
     }
@@ -89,11 +92,25 @@ body {
       margin: rem-calc(10 0);
     }
 
-    i {
+    span, a, i {
       @include inline-block;
-      margin: 0 3%;
+    }
+
+    i {
       font-size: rem-calc(25);
-      vertical-align: middle;
+    }
+
+    .email {
+
+      i {
+        margin-right: rem-calc(10);
+      }
+    }
+
+    .social-links {
+      a {
+        width: rem-calc(40);
+      }
     }
   }
 
